<resources>
    <string name="app_name">LanAppAssignment</string>


    <string name="wanLabel">Wide Area Network connected LAN\'s</string>
    <string name="lanName" />
    <string name="lanNameLabel">"LAN Name: "</string>
    <string name="lanDescription" />
    <string name="lanDescriptionLabel">Description:</string>
    <string name="lanAddress" />
    <string name="lanAddressLabel">Address:</string>
    <string name="lanCity" />
    <string name="lanCityLabel">City:</string>
    <string name="lanState" />
    <string name="lanStateLabel">State:</string>
    <string name="lanZipCode" />
    <string name="lanZipCodeLabel">ZipCode:</string>
    <string name="locationCode" />
    <string name="locationCodeLabel">LocationCode:</string>
    <string name="locationPhone" />
    <string name="locationPhoneLabel">LocationPhone:</string>
    <string name="locationManager" />
    <string name="locationManagerLabel">LocationManager:</string>
    <string name="dateOfConfiguration" />
    <string name="dateOfConfigurationLabel">Date Of Configuration: \n</string>
    <string name="toggleButton">Toggle Button</string>
    <string name="nameTextField" />
    <string name="nameTextFieldHint">Please Enter a Name</string>
    <string name="descriptionTextField" />
    <string name="descriptionTextFieldHint">Give a Description</string>
    <string name="addressTextField" />
    <string name="addressTextFieldHint">Address</string>
    <string name="cityTextField" />
    <string name="cityTextFieldHint">City</string>
    <string name="stateTextField" />
    <string name="stateTextFieldHint">State</string>
    <string name="zipCodeTextField" />
    <string name="zipCodeTextFieldHint">Zip Code</string>
    <string name="locationCodeTextField" />
    <string name="locationCodeTextFieldHint">Location Code</string>
    <string name="locationPhoneTextField" />
    <string name="locationPhoneTextFieldHint">Location Phone</string>
    <string name="locationManagerTextField" />
    <string name="locationManagerTextFieldHint">Location Manager</string>
    <string name="dateOfConfigurationTextField" />
    <string name="dateofConfigurationTextFieldHint">Date of Configuration</string>
    <string name="cancelButton">Cancel</string>
    <string name="saveButton">Save</string>
    <string name="addANetworkButton">Add A Network</string>
    <string name="dateOfConfigurationTextFieldHint">Date of Configuration</string>
    <string name="appNameTextView">Add a Lan to the Network</string>
    <string name="activitySwitchConfirmation" />
    <string name="addLanSaveButton">Save</string>
    <string name="lanItemName" />
    <string name="lanItemDescription" />
</resources>