<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddLAN">

        <LinearLayout
            android:id="@+id/appNameLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:baselineAligned="false"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <TextView
                    android:id="@+id/appNameTextView"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="#C95527B0"
                    android:gravity="center"
                    android:text="@string/appNameTextView"
                    android:textColor="#FFFFFF"
                    android:textSize="18sp"
                    app:layout_constraintBottom_toTopOf="@+id/toggleButton"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent" />

                <ToggleButton
                    android:id="@+id/toggleButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/toggleButton"
                    android:textSize="14sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/appNameTextView" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <ScrollView
            android:id="@+id/lanInfoScroll"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="64dp"
            android:layout_marginBottom="64dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appNameLayout">

            <LinearLayout
                android:id="@+id/lanInfoLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <EditText
                        android:id="@+id/nameTextField"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="32dp"
                        android:layout_marginEnd="16dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/nameTextFieldHint"
                        android:inputType="text"
                        android:minHeight="48dp"
                        android:text="@string/nameTextField"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="TextContrastCheck" />

                    <EditText
                        android:id="@+id/descriptionTextField"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/descriptionTextFieldHint"
                        android:inputType="text"
                        android:minHeight="48dp"
                        android:text="@string/descriptionTextField"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/nameTextField"
                        tools:ignore="TextContrastCheck" />

                    <EditText
                        android:id="@+id/addressTextField"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/addressTextFieldHint"
                        android:inputType="text"
                        android:minHeight="48dp"
                        android:text="@string/addressTextField"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/descriptionTextField"
                        tools:ignore="VisualLintTextFieldSize" />

                    <EditText
                        android:id="@+id/cityTextField"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/cityTextFieldHint"
                        android:inputType="text"
                        android:minHeight="48dp"
                        android:text="@string/cityTextField"
                        app:layout_constraintEnd_toStartOf="@+id/stateTextField"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/addressTextField"
                        tools:ignore="TextContrastCheck" />

                    <EditText
                        android:id="@+id/stateTextField"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/stateTextFieldHint"
                        android:inputType="text"
                        android:minHeight="48dp"
                        android:text="@string/stateTextField"
                        app:layout_constraintEnd_toStartOf="@+id/zipCodeTextField"
                        app:layout_constraintStart_toEndOf="@+id/cityTextField"
                        app:layout_constraintTop_toBottomOf="@+id/addressTextField"
                        tools:ignore="TextContrastCheck" />

                    <EditText
                        android:id="@+id/zipCodeTextField"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/zipCodeTextFieldHint"
                        android:inputType="text"
                        android:minHeight="48dp"
                        android:text="@string/zipCodeTextField"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/stateTextField"
                        app:layout_constraintTop_toBottomOf="@+id/addressTextField"
                        tools:ignore="TextContrastCheck" />

                    <EditText
                        android:id="@+id/locationCodeTextField"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/locationCodeTextFieldHint"
                        android:inputType="text"
                        android:minHeight="48dp"
                        android:text="@string/locationCodeTextField"
                        app:layout_constraintEnd_toStartOf="@+id/locationPhoneTextField"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cityTextField"
                        tools:ignore="TextContrastCheck" />

                    <EditText
                        android:id="@+id/locationPhoneTextField"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/locationPhoneTextFieldHint"
                        android:inputType="text"
                        android:minHeight="48dp"
                        android:text="@string/locationPhoneTextField"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/locationCodeTextField"
                        app:layout_constraintTop_toBottomOf="@+id/zipCodeTextField"
                        tools:ignore="TextFields,TextContrastCheck" />

                    <EditText
                        android:id="@+id/locationManagerTextField"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/locationManagerTextFieldHint"
                        android:inputType="text"
                        android:minHeight="48dp"
                        android:text="@string/locationManagerTextField"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/locationPhoneTextField"
                        tools:ignore="TextContrastCheck" />

                    <EditText
                        android:id="@+id/dateOfConfigurationTextField"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:autofillHints=""
                        android:ems="10"
                        android:hint="@string/dateOfConfigurationTextFieldHint"
                        android:inputType="text"
                        android:minHeight="48dp"
                        android:text="@string/dateOfConfigurationTextField"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/locationManagerTextField"
                        tools:ignore="TextFields,TextContrastCheck" />

                    <Button
                        android:id="@+id/addLanSaveButton"
                        android:layout_width="120dp"
                        android:layout_height="60dp"
                        android:layout_marginTop="32dp"
                        android:textSize="16sp"
                        android:text="@string/addLanSaveButton"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/dateOfConfigurationTextField" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </LinearLayout>
        </ScrollView>

    <LinearLayout
        android:id="@+id/imageButtonLayout"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintVertical_bias="0"
        tools:ignore="NotSibling,RtlHardcoded">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/activitySwitchConfirmation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="32dp"
                android:gravity="center"
                android:text="@string/activitySwitchConfirmation"
                app:layout_constraintBottom_toTopOf="@+id/mapsImageButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <ImageButton
                android:id="@+id/lanListImageButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/addLanImageButton"
                app:layout_constraintStart_toStartOf="parent"
                app:srcCompat="@drawable/ic_action_lan_list"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <ImageButton
                android:id="@+id/addLanImageButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/mapsImageButton"
                app:layout_constraintStart_toEndOf="@+id/lanListImageButton"
                app:srcCompat="@drawable/ic_action_add_lan"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck"/>

            <ImageButton
                android:id="@+id/mapsImageButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/settingsImageButton"
                app:layout_constraintStart_toEndOf="@+id/addLanImageButton"
                app:srcCompat="@drawable/ic_action_maps"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck,TouchTargetSizeCheck" />

            <ImageButton
                android:id="@+id/settingsImageButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/mapsImageButton"
                app:srcCompat="@drawable/ic_action_settings"
                tools:ignore="ContentDescription,SpeakableTextPresentCheck,ImageContrastCheck" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>